# Kyber_chip_cpa

AES cw firmware/SS1x_firmware/: kyber-CW308_STM32F3.eep  kyber-CW308_STM32F3.elf  kyber-CW308_STM32F3.hex  kyber-CW308_STM32F3.lss  kyber-CW308_STM32F3.map  kyber-CW308_STM32F3.sym  main.c  makefile
AES cw firmware/SS1x_firmware/.dep/: main.o.d  simpleserial.o.d  stm32f3_hal.o.d  stm32f3_hal_lowlevel.o.d  stm32f3_sysmem.o.d
AES cw firmware/SS1x_firmware/objdir/: main.lst  simpleserial.lst  stm32f3_hal.lst  stm32f3_hal_lowlevel.lst  stm32f3_startup.lst  stm32f3_sysmem.lst
AES cw firmware/base/: Makefile.inc
kyber_cpa_attack/수정전/: Kyber-보존.ipynb
kyber_cpa_attack/수정후/: Kyber-실헝용-Copy1.ipynb  Kyber-실헝용-Copy2(여기서 하는중).ipynb  Kyber-이번에 실험중인 것.ipynb
test_kyber2/: CMakeLists.txt  indcpa.c  kem.c  ntt.c  poly.c  polyvec.c  randombytes.c  reduce.h  symmetric-aes.c  symmetric-shake.c  test_kyber.c
